name:                conduit-parse
version:             0.1.0.0
synopsis:            Parsing framework based on conduit.
homepage:            https://github.com/k0ral/conduit-parse
license:             OtherLicense
license-file:        LICENSE
author:              koral <koral@mailoo.org>
maintainer:          koral <koral@mailoo.org>
category:            Conduit, Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
    type:     git
    location: git://github.com/k0ral/conduit-parse.git

library
  exposed-modules:
    Data.Conduit.Parser
  build-depends:
      base >= 4.8 && < 5
    , conduit
    , exceptions
    , parsers
    , text
    , transformers
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-unused-do-bind

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      base >= 4.8 && < 5
    , conduit
    , conduit-parse
    , exceptions
    , hlint
    , parsers
    , resourcet
    , tasty
    , tasty-hunit
    -- , tasty-quickcheck
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-unused-do-bind
